src/component/file_browser/snapshots/envision__component__file_browser__tests__render_empty.snap
---
source: src/component/file_browser/tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────────────────────────┐
│/ / empty                                                 │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
